Add new commands to alias reserved name check and add support for generic commands